add style.css files

--- a/recipes/coffee.html
+++ b/recipes/coffee.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Diner Coffee</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <h1>Diner Coffee</h1>
