--- a/recipes/lemon-pie.html
+++ b/recipes/lemon-pie.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Lemon Meringue Pie</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
